src/commander/snapshots/lazyjj__commander__files__tests__get_file_diff-3.snap
---
source: src/commander/files.rs
expression: "test_repo.commander.get_file_diff(&head, &file, &DiffFormat::ColorWords,\ntrue)?"
---
Some(
    "Modified regular file README:\n   1     : AAA\n        1: BBB\n",
)
