src/commander/snapshots/lazyjj__commander__files__tests__get_file_diff-4.snap
---
source: src/commander/files.rs
expression: "test_repo.commander.get_file_diff(&head, \"README\", &DiffFormat::Git)?"
---
"diff --git a/README b/README\nindex 43d88b6586..f6d5afa370 100644\n--- a/README\n+++ b/README\n@@ -1,1 +1,1 @@\n-AAA\n\\ No newline at end of file\n+BBB\n\\ No newline at end of file\n"
