src/commander/snapshots/lazyjj__commander__files__tests__get_file_diff-5.snap
---
source: src/commander/files.rs
expression: "test_repo.commander.get_file_diff(&head, \"README\", &DiffFormat::ColorWords)?"
---
"Removed regular file README:\n   1     : AAA\n"
