src/commander/snapshots/lazyjj__commander__files__tests__get_file_diff-6.snap
---
source: src/commander/files.rs
expression: "test_repo.commander.get_file_diff(&head, &file, &DiffFormat::Git)?"
---
Some(
    "diff --git a/README b/README2\nrename from README\nrename to README2\n",
)
