src/commander/snapshots/lazyjj__commander__files__tests__get_file_diff-7.snap
---
source: src/commander/files.rs
expression: "test_repo.commander.get_file_diff(&head, &file, &DiffFormat::ColorWords)?"
---
Some(
    "Removed regular file README2:\n   1     : BBB\n",
)
